# dailynationaltimes

./: .gitignore  db.sqlite3  pyproject.toml
accounts/: forms.py  urls.py  views.py
ads/: admin.py  models.py
ads/migrations/: 0001_initial.py
core/: admin.py  context_processor.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
dnt/: asgi.py  settings.py  urls.py  wsgi.py
editorials/: admin.py  apps.py  forms.py  github_storage.py  models.py  permissions.py  tests_github_storage.py  tests_roles.py  urls.py  views.py
editorials/management/commands/: seed.py
editorials/migrations/: 0001_initial.py
static/: article.html  home.html
static/css/: main.css
staticfiles/: article.css  article.js  home.css
staticfiles/js/: main.js
templates/: 404.html  base.html
templates/accounts/: profile.html  register.html
templates/core/: about.html  contact.html  home.html  search.html
templates/editorials/: category.html  dashboard.html  post_confirm_delete.html  post_detail.html  post_form.html  tag.html
templates/partials/: ad_slot.html  dash_foot.html  dash_head.html  pagination.html  post_card.html  posts_grid.html  sidebar.html
templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html
