[project]
name = "dnt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.7",
    "django-compressor>=4.6.0",
    "django-jazzmin>=3.0.5",
    "dj-database-url>=2.2.0",
    "gunicorn>=26.0.0",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
